# Tessera

./: .gitignore  =1.4.0  =2.2.0  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  DECISION_LOG.md  Dockerfile  EXPERIMENT_LOG.md  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.yml  main351.py  main352.py  main353.py  main354.py  main355.py  main360.py  main360_gpu.py  main360_gpu_v3_cpu.py  main360_gpu_v4.py  monitor.sh  monitor_simple.sh  pyproject.toml  requirements_gpu.txt  requirements_lock.txt  streamlit_dashboard.py  test_mamba.py
.devcontainer/: devcontainer.json
configs/: config.yaml
configs/model/: mamba_small.yaml
docs/: DESIGN_SPEC_PHASE_II.md  DESIGN_SPEC_PHASE_III.md  EXPERIMENT_LOG_20260113.md  IMPLEMENTATION_PRINCIPLES.md  KNOWN_TRAPS.md  PARKING_LOT.md  PHASE_III_2_RESULTS.md  PHASE_III_INTEGRATION_SPEC.md  POC_1_RESULTS.md  POC_PHASE_III_DESIGN.md
src/: chain_utils.py  data.py  diffusion.py  diffusion_boundary.py  diffusion_boundary_extreme.py  diffusion_boundary_final.py  diffusion_fix.py  elo.py  eval_quick.py  full_integration_test.py  fusion_layer.py  gpu_go_engine.py  integration_test.py  long_training.py  long_training_phase3.py  long_training_v3.py  long_training_v4.py  long_training_v4.py.broken  long_training_v5.py  model.py  monitor.py  ray_cast.py  ray_cast_boundary.py  ray_cast_boundary_extreme.py  ray_cast_v2.py  ray_index.py  run_phase3_1a.py  run_phase3_training.py  tessera_model.py  test_tromp_taylor.py  train.py  train_minimal.py  train_phase3_2.py  train_phase3_2_fixed.py  trainer_phase3.py  utils.py
(+1 files in other folders)
