[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.1.0"
description = "Token Encoded State-space Sequence Engine for Rapid Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "mamba-ssm>=1.0.1",
    "transformers>=4.36.0",
    "datasets>=2.15.0",
    "safetensors>=0.4.1",
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
]